WIP - App level localization

--- a/assets/translations/de-DE.json
+++ b/assets/translations/de-DE.json
@@ -1,5 +1,6 @@
 {
   "appTitle": "qBitConnect",
+  "appName": "qBitConnect",
   "settings": "Einstellungen",
   "servers": "Server",
   "statistics": "Statistiken",
@@ -10,6 +11,7 @@
   "downloads": "Downloads",
   "uploads": "Uploads",
   "chooseLanguage": "Sprache wählen",
+  "chooseTheme": "Design wählen",
   "english": "Englisch",
   "spanish": "Spanisch",
   "french": "Französisch",
@@ -17,15 +19,15 @@
   "lightTheme": "Helles Design",
   "darkTheme": "Dunkles Design",
   "oledTheme": "OLED Design",
-  "highContrastLight": "Hoher Kontrast Hell",
-  "highContrastDark": "Hoher Kontrast Dunkel",
+  "highContrastLight": "Hochkontrast Hell",
+  "highContrastDark": "Hochkontrast Dunkel",
   "systemTheme": "System Design",
   "save": "Speichern",
   "cancel": "Abbrechen",
   "ok": "OK",
   "error": "Fehler",
   "success": "Erfolg",
-  "loading": "Laden...",
+  "loading": "Lädt...",
   "retry": "Wiederholen",
   "connect": "Verbinden",
   "disconnect": "Trennen",
@@ -36,9 +38,13 @@
   "start": "Starten",
   "stop": "Stoppen",
   "refresh": "Aktualisieren",
+  "reload": "Neu laden",
   "search": "Suchen",
   "filter": "Filtern",
   "sort": "Sortieren",
+  "edit": "Bearbeiten",
+  "add": "Hinzufügen",
+  "update": "Aktualisieren",
   "name": "Name",
   "size": "Größe",
   "status": "Status",
@@ -50,16 +56,128 @@
   "tracker": "Tracker",
   "seeders": "Seeders",
   "leechers": "Leechers",
+  "peers": "Peers",
   "ratio": "Ratio",
   "uploaded": "Hochgeladen",
   "downloaded": "Heruntergeladen",
   "completed": "Abgeschlossen",
   "downloading": "Lädt herunter",
-  "seeding": "Seeding",
+  "seeding": "Seeded",
   "paused": "Pausiert",
-  "queued": "Warteschlange",
-  "checking": "Überprüfung",
-  "stalled": "Gestoppt",
-  "error": "Fehler",
-  "unknown": "Unbekannt"
+  "queued": "In Warteschlange",
+  "checking": "Überprüft",
+  "stalled": "Hängt",
+  "unknown": "Unbekannt",
+  "active": "Aktiv",
+  "addTorrentFile": "Torrent-Datei hinzufügen",
+  "addTorrentUrl": "Torrent-URL hinzufügen",
+  "changeLocation": "Speicherort ändern",
+  "renameTorrent": "Torrent umbenennen",
+  "setPriority": "Priorität festlegen",
+  "recheck": "Neu überprüfen",
+  "rename": "Umbenennen",
+  "doNotDownload": "Nicht herunterladen",
+  "normal": "Normal",
+  "high": "Hoch",
+  "maximum": "Maximum",
+  "port": "Port",
+  "username": "Benutzername",
+  "password": "Passwort",
+  "customHeaders": "Benutzerdefinierte Header",
+  "useHttps": "HTTPS verwenden",
+  "savePassword": "Passwort speichern",
+  "showPassword": "Passwort anzeigen",
+  "hidePassword": "Passwort verbergen",
+  "rememberPasswordForFutureConnections": "Passwort für zukünftige Verbindungen merken",
+  "torrentOptions": "Torrent-Optionen",
+  "startTorrent": "Torrent starten",
+  "addToTopOfQueue": "An den Anfang der Warteschlange",
+  "manual": "Manuell",
+  "automatic": "Automatisch",
+  "none": "Keine",
+  "original": "Original",
+  "torrentFile": "Torrent-Datei",
+  "urls": "URLs",
+  "torrentUrls": "Torrent-URLs",
+  "connectToQBittorrent": "Mit qBittorrent verbinden",
+  "connecting": "Verbinde...",
+  "required": "Erforderlich",
+  "invalidHostAddress": "Ungültige Host-Adresse",
+  "invalidProtocolFormat": "Ungültiges Protokollformat",
+  "noCustomHeadersAdded": "Keine benutzerdefinierten Header hinzugefügt",
+  "headersPreview": "Header-Vorschau",
+  "editHeader": "Header bearbeiten",
+  "addHeader": "Header hinzufügen",
+  "headerKey": "Header-Schlüssel",
+  "headerKeyRequired": "Header-Schlüssel ist erforderlich",
+  "headerKeyCannotContainColons": "Header-Schlüssel darf keine Doppelpunkte enthalten",
+  "headerValue": "Header-Wert",
+  "headerValueRequired": "Header-Wert ist erforderlich",
+  "manageServers": "Server verwalten",
+  "serverList": "Server-Liste",
+  "noServers": "Keine Server",
+  "deleteServer": "Server löschen",
+  "setAsAutoConnect": "Als Auto-Verbindung festlegen",
+  "selectAll": "Alle auswählen",
+  "select": "Auswählen",
+  "info": "Info",
+  "files": "Dateien",
+  "trackers": "Tracker",
+  "message": "Nachricht",
+  "tier": "Stufe",
+  "state": "Status",
+  "noDataAvailable": "Keine Daten verfügbar",
+  "noDetailsAvailable": "Keine Details verfügbar",
+  "noTorrentsFound": "Keine Torrents gefunden",
+  "noTorrentsMatchSearch": "Keine Torrents entsprechen Ihrer Suche",
+  "anErrorOccurred": "Ein Fehler ist aufgetreten",
+  "pleaseSelectFile": "Bitte wählen Sie eine Datei aus",
+  "torrentRecheckStarted": "Torrent-Überprüfung gestartet",
+  "refreshTorrents": "Torrents aktualisieren",
+  "currentFilter": "Aktueller Filter",
+  "analytics": "Analytik",
+  "torrentCardDisplay": "Torrent-Karten-Anzeige",
+  "customizeTorrentCard": "Torrent-Karte anpassen",
+  "allTorrents": "Alle Torrents",
+  "showAllTorrents": "Alle Torrents standardmäßig anzeigen",
+  "showOnlyDownloading": "Nur herunterladende Torrents anzeigen",
+  "showOnlyCompleted": "Nur abgeschlossene Torrents anzeigen",
+  "showOnlySeeding": "Nur seende Torrents anzeigen",
+  "showOnlyPaused": "Nur pausierte Torrents anzeigen",
+  "showOnlyActive": "Nur aktive Torrents anzeigen",
+  "enableAutoRefresh": "Auto-Aktualisierung aktivieren",
+  "automaticallyRefreshTorrentList": "Torrent-Liste automatisch aktualisieren",
+  "refreshInterval": "Aktualisierungsintervall",
+  "privacyPolicy": "Datenschutzrichtlinie",
+  "readOurPrivacyPolicy": "Unsere Datenschutzrichtlinie lesen",
+  "termsConditions": "Geschäftsbedingungen",
+  "readOurTermsAndConditions": "Unsere Geschäftsbedingungen lesen",
+  "logs": "Protokolle",
+  "version": "Version",
+  "pleaseEnterAtLeastOneUrl": "Bitte geben Sie mindestens eine URL ein",
+  "failedToAddTorrent": "Torrent konnte nicht hinzugefügt werden",
+  "successfullyAddedTorrents": "Torrent(s) erfolgreich hinzugefügt",
+  "errorAddingTorrent": "Fehler beim Hinzufügen des Torrents",
+  "languageChangedTo": "Sprache geändert zu",
+  "torrentManagementMode": "Torrent-Verwaltungsmodus",
+  "fileSize": "Dateigröße",
+  "failedToLoadServers": "Laden der Server fehlgeschlagen. Bitte versuchen Sie es erneut.",
+  "connectedTo": "Verbunden mit",
+  "deleteLastServer": "Letzten Server löschen",
+  "deleted": "gelöscht",
+  "failedToDeleteServer": "Löschen des Servers fehlgeschlagen. Bitte versuchen Sie es erneut.",
+  "addServer": "Server hinzufügen",
+  "reset": "Zurücksetzen",
+  "stopCondition": "Stopp-Bedingung",
+  "metadataReceived": "Metadaten erhalten",
+  "filesChecked": "Dateien überprüft",
+  "contentLayout": "Inhaltslayout",
+  "createSubfolder": "Unterordner erstellen",
+  "dontCreateSubfolder": "Keinen Unterordner erstellen",
+  "skipHashCheck": "Hash-Überprüfung überspringen",
+  "downloadSequential": "In sequenzieller Reihenfolge herunterladen",
+  "downloadFirstLast": "Erste und letzte Teile zuerst herunterladen",
+  "limitDownloadRate": "Download-Geschwindigkeit begrenzen",
+  "limitUploadRate": "Upload-Geschwindigkeit begrenzen",
+  "saveFilesToLocation": "Dateien an Speicherort speichern"
 }
