--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -1,5 +1,6 @@
 {
   "appTitle": "qBitConnect",
+  "appName": "qBitConnect",
   "settings": "Settings",
   "servers": "Servers",
   "statistics": "Statistics",
@@ -10,6 +11,7 @@
   "downloads": "Downloads",
   "uploads": "Uploads",
   "chooseLanguage": "Choose Language",
+  "chooseTheme": "Choose Theme",
   "english": "English",
   "spanish": "Spanish",
   "french": "French",
@@ -36,9 +38,13 @@
   "start": "Start",
   "stop": "Stop",
   "refresh": "Refresh",
+  "reload": "Reload",
   "search": "Search",
   "filter": "Filter",
   "sort": "Sort",
+  "edit": "Edit",
+  "add": "Add",
+  "update": "Update",
   "name": "Name",
   "size": "Size",
   "status": "Status",
@@ -49,7 +55,8 @@
   "tags": "Tags",
   "tracker": "Tracker",
   "seeders": "Seeders",
-  "leechers": "Leechers",
+  "leechers": "Leeches",
+  "peers": "Peers",
   "ratio": "Ratio",
   "uploaded": "Uploaded",
   "downloaded": "Downloaded",
@@ -60,6 +67,121 @@
   "queued": "Queued",
   "checking": "Checking",
   "stalled": "Stalled",
-  "error": "Error",
-  "unknown": "Unknown"
+  "unknown": "Unknown",
+  "active": "Active",
+  "addTorrentFile": "Add Torrent File",
+  "addTorrentUrl": "Add Torrent URL",
+  "changeLocation": "Change Location",
+  "renameTorrent": "Rename torrent",
+  "setPriority": "Set Priority",
+  "recheck": "Recheck",
+  "rename": "Rename",
+  "doNotDownload": "Do not download",
+  "normal": "Normal",
+  "high": "High",
+  "maximum": "Maximum",
+  "port": "Port",
+  "username": "Username",
+  "password": "Password",
+  "customHeaders": "Custom Headers",
+  "useHttps": "Use HTTPS",
+  "savePassword": "Save Password",
+  "showPassword": "Show password",
+  "hidePassword": "Hide password",
+  "rememberPasswordForFutureConnections": "Remember password for future connections",
+  "torrentOptions": "Torrent Options",
+  "startTorrent": "Start Torrent",
+  "addToTopOfQueue": "Add to Top of Queue",
+  "manual": "Manual",
+  "automatic": "Automatic",
+  "none": "None",
+  "original": "Original",
+  "torrentFile": "Torrent File",
+  "urls": "URLs",
+  "torrentUrls": "Torrent URLs",
+  "connectToQBittorrent": "Connect to qBittorrent",
+  "connecting": "Connecting…",
+  "required": "Required",
+  "invalidHostAddress": "Invalid host address",
+  "invalidProtocolFormat": "Invalid protocol format",
+  "noCustomHeadersAdded": "No custom headers added",
+  "headersPreview": "Headers Preview",
+  "editHeader": "Edit Header",
+  "addHeader": "Add Header",
+  "headerKey": "Header Key",
+  "headerKeyRequired": "Header key is required",
+  "headerKeyCannotContainColons": "Header key cannot contain colons",
+  "headerValue": "Header Value",
+  "headerValueRequired": "Header value is required",
+  "manageServers": "Manage Servers",
+  "serverList": "Server List",
+  "noServers": "No Servers",
+  "deleteServer": "Delete Server",
+  "setAsAutoConnect": "Set as Auto-Connect",
+  "selectAll": "Select All",
+  "select": "Select",
+  "info": "Info",
+  "files": "Files",
+  "trackers": "Trackers",
+  "message": "Message",
+  "tier": "Tier",
+  "state": "State",
+  "noDataAvailable": "No data available",
+  "noDetailsAvailable": "No details available",
+  "noTorrentsFound": "No torrents found",
+  "noTorrentsMatchSearch": "No torrents match your search",
+  "anErrorOccurred": "An error occurred",
+  "pleaseSelectFile": "Please select a file",
+  "torrentRecheckStarted": "Torrent recheck started",
+  "refreshTorrents": "Refresh torrents",
+  "currentFilter": "Current Filter",
+  "analytics": "Analytics",
+  "torrentCardDisplay": "Torrent Card Display",
+  "customizeTorrentCard": "Customize torrent card",
+  "allTorrents": "All Torrents",
+  "showAllTorrents": "Show all torrents by default",
+  "showOnlyDownloading": "Show only downloading torrents",
+  "showOnlyCompleted": "Show only completed torrents",
+  "showOnlySeeding": "Show only seeding torrents",
+  "showOnlyPaused": "Show only paused torrents",
+  "showOnlyActive": "Show only active torrents",
+  "enableAutoRefresh": "Enable Auto-Refresh",
+  "automaticallyRefreshTorrentList": "Automatically refresh torrent list",
+  "refreshInterval": "Refresh Interval",
+  "privacyPolicy": "Privacy Policy",
+  "readOurPrivacyPolicy": "Read our privacy policy",
+  "termsConditions": "Terms & Conditions",
+  "readOurTermsAndConditions": "Read our terms and conditions",
+  "logs": "Logs",
+  "version": "Version",
+  "pleaseEnterAtLeastOneUrl": "Please enter at least one URL",
+  "failedToAddTorrent": "Failed to add torrent",
+  "successfullyAddedTorrents": "Successfully added torrent(s)",
+  "errorAddingTorrent": "Error adding torrent",
+  "languageChangedTo": "Language changed to",
+  "torrentManagementMode": "Torrent Management Mode",
+  "fileSize": "File size",
+  "failedToLoadServers": "Failed to load servers. Please try again.",
+  "connectedTo": "Connected to",
+  "deleteServer": "Delete Server",
+  "deleteLastServer": "Delete Last Server",
+  "deleted": "deleted",
+  "failedToDeleteServer": "Failed to delete server. Please try again.",
+  "connect": "Connect",
+  "active": "Active",
+  "servers": "Servers",
+  "addServer": "Add Server",
+  "reset": "Reset",
+  "stopCondition": "Stop condition",
+  "metadataReceived": "Metadata received",
+  "filesChecked": "Files checked",
+  "contentLayout": "Content layout",
+  "createSubfolder": "Create subfolder",
+  "dontCreateSubfolder": "Don't create subfolder",
+  "skipHashCheck": "Skip hash check",
+  "downloadSequential": "Download in sequential order",
+  "downloadFirstLast": "Download first and last pieces first",
+  "limitDownloadRate": "Limit download rate",
+  "limitUploadRate": "Limit upload rate",
+  "saveFilesToLocation": "Save files to location"
 }
