--- a/assets/translations/es-ES.json
+++ b/assets/translations/es-ES.json
@@ -1,5 +1,6 @@
 {
   "appTitle": "qBitConnect",
+  "appName": "qBitConnect",
   "settings": "Configuración",
   "servers": "Servidores",
   "statistics": "Estadísticas",
@@ -10,6 +11,7 @@
   "downloads": "Descargas",
   "uploads": "Subidas",
   "chooseLanguage": "Elegir Idioma",
+  "chooseTheme": "Elegir Tema",
   "english": "Inglés",
   "spanish": "Español",
   "french": "Francés",
@@ -36,9 +38,13 @@
   "start": "Iniciar",
   "stop": "Detener",
   "refresh": "Actualizar",
+  "reload": "Recargar",
   "search": "Buscar",
   "filter": "Filtrar",
   "sort": "Ordenar",
+  "edit": "Editar",
+  "add": "Agregar",
+  "update": "Actualizar",
   "name": "Nombre",
   "size": "Tamaño",
   "status": "Estado",
@@ -50,6 +56,7 @@
   "tracker": "Tracker",
   "seeders": "Seeders",
   "leechers": "Leechers",
+  "peers": "Peers",
   "ratio": "Ratio",
   "uploaded": "Subido",
   "downloaded": "Descargado",
@@ -60,6 +67,117 @@
   "queued": "En Cola",
   "checking": "Verificando",
   "stalled": "Estancado",
-  "error": "Error",
-  "unknown": "Desconocido"
+  "unknown": "Desconocido",
+  "active": "Activo",
+  "addTorrentFile": "Agregar Archivo Torrent",
+  "addTorrentUrl": "Agregar URL de Torrent",
+  "changeLocation": "Cambiar Ubicación",
+  "renameTorrent": "Renombrar torrent",
+  "setPriority": "Establecer Prioridad",
+  "recheck": "Verificar",
+  "rename": "Renombrar",
+  "doNotDownload": "No descargar",
+  "normal": "Normal",
+  "high": "Alto",
+  "maximum": "Máximo",
+  "port": "Puerto",
+  "username": "Usuario",
+  "password": "Contraseña",
+  "customHeaders": "Encabezados Personalizados",
+  "useHttps": "Usar HTTPS",
+  "savePassword": "Guardar Contraseña",
+  "showPassword": "Mostrar contraseña",
+  "hidePassword": "Ocultar contraseña",
+  "rememberPasswordForFutureConnections": "Recordar contraseña para futuras conexiones",
+  "torrentOptions": "Opciones de Torrent",
+  "startTorrent": "Iniciar Torrent",
+  "addToTopOfQueue": "Agregar al Inicio de la Cola",
+  "manual": "Manual",
+  "automatic": "Automático",
+  "none": "Ninguno",
+  "original": "Original",
+  "torrentFile": "Archivo Torrent",
+  "urls": "URLs",
+  "torrentUrls": "URLs de Torrent",
+  "connectToQBittorrent": "Conectar a qBittorrent",
+  "connecting": "Conectando…",
+  "required": "Requerido",
+  "invalidHostAddress": "Dirección de host inválida",
+  "invalidProtocolFormat": "Formato de protocolo inválido",
+  "noCustomHeadersAdded": "No se agregaron encabezados personalizados",
+  "headersPreview": "Vista Previa de Encabezados",
+  "editHeader": "Editar Encabezado",
+  "addHeader": "Agregar Encabezado",
+  "headerKey": "Clave del Encabezado",
+  "headerKeyRequired": "La clave del encabezado es requerida",
+  "headerKeyCannotContainColons": "La clave del encabezado no puede contener dos puntos",
+  "headerValue": "Valor del Encabezado",
+  "headerValueRequired": "El valor del encabezado es requerido",
+  "manageServers": "Gestionar Servidores",
+  "serverList": "Lista de Servidores",
+  "noServers": "Sin Servidores",
+  "deleteServer": "Eliminar Servidor",
+  "setAsAutoConnect": "Establecer como Auto-Conectar",
+  "selectAll": "Seleccionar Todo",
+  "select": "Seleccionar",
+  "info": "Información",
+  "files": "Archivos",
+  "trackers": "Trackers",
+  "message": "Mensaje",
+  "tier": "Nivel",
+  "state": "Estado",
+  "noDataAvailable": "No hay datos disponibles",
+  "noDetailsAvailable": "No hay detalles disponibles",
+  "noTorrentsFound": "No se encontraron torrents",
+  "noTorrentsMatchSearch": "Ningún torrent coincide con tu búsqueda",
+  "anErrorOccurred": "Ocurrió un error",
+  "pleaseSelectFile": "Por favor selecciona un archivo",
+  "torrentRecheckStarted": "Verificación de torrent iniciada",
+  "refreshTorrents": "Actualizar torrents",
+  "currentFilter": "Filtro Actual",
+  "analytics": "Analíticas",
+  "torrentCardDisplay": "Visualización de Tarjetas de Torrent",
+  "customizeTorrentCard": "Personalizar tarjeta de torrent",
+  "allTorrents": "Todos los Torrents",
+  "showAllTorrents": "Mostrar todos los torrents por defecto",
+  "showOnlyDownloading": "Mostrar solo torrents descargando",
+  "showOnlyCompleted": "Mostrar solo torrents completados",
+  "showOnlySeeding": "Mostrar solo torrents compartiendo",
+  "showOnlyPaused": "Mostrar solo torrents pausados",
+  "showOnlyActive": "Mostrar solo torrents activos",
+  "enableAutoRefresh": "Habilitar Actualización Automática",
+  "automaticallyRefreshTorrentList": "Actualizar automáticamente la lista de torrents",
+  "refreshInterval": "Intervalo de Actualización",
+  "privacyPolicy": "Política de Privacidad",
+  "readOurPrivacyPolicy": "Leer nuestra política de privacidad",
+  "termsConditions": "Términos y Condiciones",
+  "readOurTermsAndConditions": "Leer nuestros términos y condiciones",
+  "logs": "Registros",
+  "version": "Versión",
+  "pleaseEnterAtLeastOneUrl": "Por favor ingrese al menos una URL",
+  "failedToAddTorrent": "Error al agregar torrent",
+  "successfullyAddedTorrents": "Torrent(s) agregado(s) exitosamente",
+  "errorAddingTorrent": "Error al agregar torrent",
+  "languageChangedTo": "Idioma cambiado a",
+  "torrentManagementMode": "Modo de Gestión de Torrent",
+  "fileSize": "Tamaño del archivo",
+  "failedToLoadServers": "Error al cargar servidores. Por favor inténtalo de nuevo.",
+  "connectedTo": "Conectado a",
+  "deleteLastServer": "Eliminar Último Servidor",
+  "deleted": "eliminado",
+  "failedToDeleteServer": "Error al eliminar servidor. Por favor inténtalo de nuevo.",
+  "addServer": "Agregar Servidor",
+  "reset": "Restablecer",
+  "stopCondition": "Condición de parada",
+  "metadataReceived": "Metadatos recibidos",
+  "filesChecked": "Archivos verificados",
+  "contentLayout": "Diseño de contenido",
+  "createSubfolder": "Crear subcarpeta",
+  "dontCreateSubfolder": "No crear subcarpeta",
+  "skipHashCheck": "Omitir verificación hash",
+  "downloadSequential": "Descargar en orden secuencial",
+  "downloadFirstLast": "Descargar primero y último fragmentos primero",
+  "limitDownloadRate": "Limitar velocidad de descarga",
+  "limitUploadRate": "Limitar velocidad de subida",
+  "saveFilesToLocation": "Guardar archivos en ubicación"
 }
