--- a/assets/translations/fr-FR.json
+++ b/assets/translations/fr-FR.json
@@ -1,5 +1,6 @@
 {
   "appTitle": "qBitConnect",
+  "appName": "qBitConnect",
   "settings": "Paramètres",
   "servers": "Serveurs",
   "statistics": "Statistiques",
@@ -10,6 +11,7 @@
   "downloads": "Téléchargements",
   "uploads": "Téléversements",
   "chooseLanguage": "Choisir la Langue",
+  "chooseTheme": "Choisir le Thème",
   "english": "Anglais",
   "spanish": "Espagnol",
   "french": "Français",
@@ -17,8 +19,8 @@
   "lightTheme": "Thème Clair",
   "darkTheme": "Thème Sombre",
   "oledTheme": "Thème OLED",
-  "highContrastLight": "Haut Contraste Clair",
-  "highContrastDark": "Haut Contraste Sombre",
+  "highContrastLight": "Contraste Élevé Clair",
+  "highContrastDark": "Contraste Élevé Sombre",
   "systemTheme": "Thème Système",
   "save": "Enregistrer",
   "cancel": "Annuler",
@@ -36,9 +38,13 @@
   "start": "Démarrer",
   "stop": "Arrêter",
   "refresh": "Actualiser",
+  "reload": "Recharger",
   "search": "Rechercher",
   "filter": "Filtrer",
   "sort": "Trier",
+  "edit": "Modifier",
+  "add": "Ajouter",
+  "update": "Mettre à jour",
   "name": "Nom",
   "size": "Taille",
   "status": "Statut",
@@ -50,16 +56,128 @@
   "tracker": "Tracker",
   "seeders": "Seeders",
   "leechers": "Leechers",
+  "peers": "Pairs",
   "ratio": "Ratio",
   "uploaded": "Téléversé",
   "downloaded": "Téléchargé",
   "completed": "Terminé",
   "downloading": "Téléchargement",
-  "seeding": "Seeding",
+  "seeding": "Partage",
   "paused": "En pause",
   "queued": "En file",
   "checking": "Vérification",
   "stalled": "Bloqué",
-  "error": "Erreur",
-  "unknown": "Inconnu"
+  "unknown": "Inconnu",
+  "active": "Actif",
+  "addTorrentFile": "Ajouter Fichier Torrent",
+  "addTorrentUrl": "Ajouter URL Torrent",
+  "changeLocation": "Changer l'Emplacement",
+  "renameTorrent": "Renommer torrent",
+  "setPriority": "Définir Priorité",
+  "recheck": "Vérifier",
+  "rename": "Renommer",
+  "doNotDownload": "Ne pas télécharger",
+  "normal": "Normal",
+  "high": "Élevé",
+  "maximum": "Maximum",
+  "port": "Port",
+  "username": "Nom d'utilisateur",
+  "password": "Mot de passe",
+  "customHeaders": "En-têtes Personnalisés",
+  "useHttps": "Utiliser HTTPS",
+  "savePassword": "Enregistrer le mot de passe",
+  "showPassword": "Afficher le mot de passe",
+  "hidePassword": "Masquer le mot de passe",
+  "rememberPasswordForFutureConnections": "Mémoriser le mot de passe pour les futures connexions",
+  "torrentOptions": "Options Torrent",
+  "startTorrent": "Démarrer Torrent",
+  "addToTopOfQueue": "Ajouter en haut de la file",
+  "manual": "Manuel",
+  "automatic": "Automatique",
+  "none": "Aucun",
+  "original": "Original",
+  "torrentFile": "Fichier Torrent",
+  "urls": "URLs",
+  "torrentUrls": "URLs Torrent",
+  "connectToQBittorrent": "Se connecter à qBittorrent",
+  "connecting": "Connexion en cours…",
+  "required": "Requis",
+  "invalidHostAddress": "Adresse d'hôte invalide",
+  "invalidProtocolFormat": "Format de protocole invalide",
+  "noCustomHeadersAdded": "Aucun en-tête personnalisé ajouté",
+  "headersPreview": "Aperçu des En-têtes",
+  "editHeader": "Modifier l'En-tête",
+  "addHeader": "Ajouter l'En-tête",
+  "headerKey": "Clé d'En-tête",
+  "headerKeyRequired": "La clé d'en-tête est requise",
+  "headerKeyCannotContainColons": "La clé d'en-tête ne peut pas contenir de deux-points",
+  "headerValue": "Valeur d'En-tête",
+  "headerValueRequired": "La valeur d'en-tête est requise",
+  "manageServers": "Gérer les Serveurs",
+  "serverList": "Liste des Serveurs",
+  "noServers": "Aucun Serveur",
+  "deleteServer": "Supprimer le Serveur",
+  "setAsAutoConnect": "Définir comme Auto-Connexion",
+  "selectAll": "Tout sélectionner",
+  "select": "Sélectionner",
+  "info": "Info",
+  "files": "Fichiers",
+  "trackers": "Trackers",
+  "message": "Message",
+  "tier": "Niveau",
+  "state": "État",
+  "noDataAvailable": "Aucune donnée disponible",
+  "noDetailsAvailable": "Aucun détail disponible",
+  "noTorrentsFound": "Aucun torrent trouvé",
+  "noTorrentsMatchSearch": "Aucun torrent ne correspond à votre recherche",
+  "anErrorOccurred": "Une erreur s'est produite",
+  "pleaseSelectFile": "Veuillez sélectionner un fichier",
+  "torrentRecheckStarted": "Vérification du torrent démarrée",
+  "refreshTorrents": "Actualiser les torrents",
+  "currentFilter": "Filtre Actuel",
+  "analytics": "Analytiques",
+  "torrentCardDisplay": "Affichage des Cartes Torrent",
+  "customizeTorrentCard": "Personnaliser la carte torrent",
+  "allTorrents": "Tous les Torrents",
+  "showAllTorrents": "Afficher tous les torrents par défaut",
+  "showOnlyDownloading": "Afficher seulement les torrents en téléchargement",
+  "showOnlyCompleted": "Afficher seulement les torrents terminés",
+  "showOnlySeeding": "Afficher seulement les torrents en partage",
+  "showOnlyPaused": "Afficher seulement les torrents en pause",
+  "showOnlyActive": "Afficher seulement les torrents actifs",
+  "enableAutoRefresh": "Activer l'Actualisation Automatique",
+  "automaticallyRefreshTorrentList": "Actualiser automatiquement la liste des torrents",
+  "refreshInterval": "Intervalle d'Actualisation",
+  "privacyPolicy": "Politique de Confidentialité",
+  "readOurPrivacyPolicy": "Lire notre politique de confidentialité",
+  "termsConditions": "Termes et Conditions",
+  "readOurTermsAndConditions": "Lire nos termes et conditions",
+  "logs": "Journaux",
+  "version": "Version",
+  "pleaseEnterAtLeastOneUrl": "Veuillez entrer au moins une URL",
+  "failedToAddTorrent": "Échec de l'ajout du torrent",
+  "successfullyAddedTorrents": "Torrent(s) ajouté(s) avec succès",
+  "errorAddingTorrent": "Erreur lors de l'ajout du torrent",
+  "languageChangedTo": "Langue changée en",
+  "torrentManagementMode": "Mode de Gestion des Torrents",
+  "fileSize": "Taille du fichier",
+  "failedToLoadServers": "Échec du chargement des serveurs. Veuillez réessayer.",
+  "connectedTo": "Connecté à",
+  "deleteLastServer": "Supprimer le Dernier Serveur",
+  "deleted": "supprimé",
+  "failedToDeleteServer": "Échec de la suppression du serveur. Veuillez réessayer.",
+  "addServer": "Ajouter Serveur",
+  "reset": "Réinitialiser",
+  "stopCondition": "Condition d'arrêt",
+  "metadataReceived": "Métadonnées reçues",
+  "filesChecked": "Fichiers vérifiés",
+  "contentLayout": "Disposition du contenu",
+  "createSubfolder": "Créer un sous-dossier",
+  "dontCreateSubfolder": "Ne pas créer de sous-dossier",
+  "skipHashCheck": "Ignorer la vérification de hachage",
+  "downloadSequential": "Télécharger dans l'ordre séquentiel",
+  "downloadFirstLast": "Télécharger d'abord les premiers et derniers fragments",
+  "limitDownloadRate": "Limiter la vitesse de téléchargement",
+  "limitUploadRate": "Limiter la vitesse de téléversement",
+  "saveFilesToLocation": "Enregistrer les fichiers dans l'emplacement"
 }
