--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -183,5 +183,18 @@
   "downloadFirstLast": "Download first and last pieces first",
   "limitDownloadRate": "Limit download rate",
   "limitUploadRate": "Limit upload rate",
-  "saveFilesToLocation": "Save files to location"
+  "saveFilesToLocation": "Save files to location",
+  "areYouSureDeleteServer": "Are you sure you want to delete",
+  "willRemoveServerConfig": "This will remove the server configuration and saved password.",
+  "deleteLastServer": "Delete Last Server",
+  "lastServerNeedToAddNew": "This is your last server. You will need to add a new server to continue.",
+  "serverDeletedReplacementSet": "deleted. set as auto-connect",
+  "serverDeleted": "deleted",
+  "failedToDeleteServerTryAgain": "Failed to delete server. Please try again.",
+  "disconnectFirstToDelete": "Disconnect first to delete",
+  "checkingConnection": "Checking connection...",
+  "lastConnected": "Last connected:",
+  "qbittorrentVersion": "qBittorrent",
+  "tapToConnectLongPressOptions": "Tap to connect. Long press for options.",
+  "tapAddServerBelowToConnect": "Tap \"Add Server\" below to connect to your first qBittorrent server."
 }
