WIP - App level localization in connection screen

--- a/assets/translations/de-DE.json
+++ b/assets/translations/de-DE.json
@@ -192,5 +192,25 @@
   "lastConnected": "Zuletzt verbunden:",
   "qbittorrentVersion": "qBittorrent",
   "tapToConnectLongPressOptions": "Tippen zum Verbinden. Lang drücken für Optionen.",
-  "tapAddServerBelowToConnect": "Tippen Sie unten auf \"Server hinzufügen\", um sich mit Ihrem ersten qBittorrent-Server zu verbinden."
+  "tapAddServerBelowToConnect": "Tippen Sie unten auf \"Server hinzufügen\", um sich mit Ihrem ersten qBittorrent-Server zu verbinden.",
+  "connectToQBittorrent": "Mit qBittorrent verbinden",
+  "connecting": "Verbinde...",
+  "serverNameOptional": "Server-Name (optional)",
+  "serverNameHint": "z.B., Heim-NAS",
+  "hostIpAddress": "Host/IP-Adresse",
+  "hostIpAddressHint": "z.B., 192.168.1.100 oder nas.local",
+  "protocolDetectedAutomatically": "Protokoll (http:// oder https://) wird automatisch erkannt",
+  "portHint": "z.B., 8080",
+  "invalidPort": "Ungültiger Port (1-65535)",
+  "pathOptional": "Pfad (optional)",
+  "pathHint": "z.B., /qbittorrent",
+  "noNetworkConnection": "Keine Netzwerkverbindung verfügbar. Bitte überprüfen Sie Ihre Internetverbindung und versuchen Sie es erneut.",
+  "connectionTimeout": "Verbindungszeitüberschreitung - Server antwortete nicht innerhalb von 10 Sekunden",
+  "authenticationRequired": "Authentifizierung erforderlich",
+  "usernamePasswordRequiredRemote": "Benutzername und Passwort sind für Remote-Verbindungen erforderlich",
+  "usernamePasswordRequiredRemoteMessage": "Benutzername und Passwort sind für Remote-Verbindungen erforderlich.",
+  "authenticationRequiredMessage": "Diese qBittorrent-Instanz erfordert Authentifizierung. Bitte geben Sie Benutzername und Passwort an.",
+  "invalidCredentials": "Ungültiger Benutzername oder Passwort. Bitte überprüfen Sie Ihre Anmeldedaten und versuchen Sie es erneut.",
+  "cannotConnectToQBittorrent": "Kann nicht mit qBittorrent verbinden. Bitte überprüfen Sie die Adresse und den Port und stellen Sie sicher, dass qBittorrent läuft.",
+  "failedToConnectToQBittorrent": "Verbindung zu qBittorrent fehlgeschlagen. Bitte überprüfen Sie Ihre Verbindungsdetails und versuchen Sie es erneut."
 }
