--- a/assets/translations/es-ES.json
+++ b/assets/translations/es-ES.json
@@ -192,5 +192,25 @@
   "lastConnected": "Última conexión:",
   "qbittorrentVersion": "qBittorrent",
   "tapToConnectLongPressOptions": "Toca para conectar. Mantén presionado para opciones.",
-  "tapAddServerBelowToConnect": "Toca \"Agregar Servidor\" abajo para conectarte a tu primer servidor qBittorrent."
+  "tapAddServerBelowToConnect": "Toca \"Agregar Servidor\" abajo para conectarte a tu primer servidor qBittorrent.",
+  "connectToQBittorrent": "Conectar a qBittorrent",
+  "connecting": "Conectando...",
+  "serverNameOptional": "Nombre del servidor (opcional)",
+  "serverNameHint": "ej., NAS de casa",
+  "hostIpAddress": "Host/Dirección IP",
+  "hostIpAddressHint": "ej., 192.168.1.100 o nas.local",
+  "protocolDetectedAutomatically": "El protocolo (http:// o https://) se detectará automáticamente",
+  "portHint": "ej., 8080",
+  "invalidPort": "Puerto inválido (1-65535)",
+  "pathOptional": "Ruta (opcional)",
+  "pathHint": "ej., /qbittorrent",
+  "noNetworkConnection": "No hay conexión de red disponible. Por favor verifica tu conexión a internet e inténtalo de nuevo.",
+  "connectionTimeout": "Tiempo de espera de conexión - el servidor no respondió dentro de 10 segundos",
+  "authenticationRequired": "Autenticación requerida",
+  "usernamePasswordRequiredRemote": "Se requieren nombre de usuario y contraseña para conexiones remotas",
+  "usernamePasswordRequiredRemoteMessage": "Se requieren nombre de usuario y contraseña para conexiones remotas.",
+  "authenticationRequiredMessage": "Esta instancia de qBittorrent requiere autenticación. Por favor proporciona nombre de usuario y contraseña.",
+  "invalidCredentials": "Nombre de usuario o contraseña inválidos. Por favor verifica tus credenciales e inténtalo de nuevo.",
+  "cannotConnectToQBittorrent": "No se puede conectar a qBittorrent. Por favor verifica la dirección y puerto, y asegúrate de que qBittorrent esté ejecutándose.",
+  "failedToConnectToQBittorrent": "Error al conectar a qBittorrent. Por favor verifica los detalles de conexión e inténtalo de nuevo."
 }
