--- a/assets/translations/fr-FR.json
+++ b/assets/translations/fr-FR.json
@@ -192,5 +192,25 @@
   "lastConnected": "Dernière connexion :",
   "qbittorrentVersion": "qBittorrent",
   "tapToConnectLongPressOptions": "Appuyez pour vous connecter. Appuyez longuement pour les options.",
-  "tapAddServerBelowToConnect": "Appuyez sur \"Ajouter Serveur\" ci-dessous pour vous connecter à votre premier serveur qBittorrent."
+  "tapAddServerBelowToConnect": "Appuyez sur \"Ajouter Serveur\" ci-dessous pour vous connecter à votre premier serveur qBittorrent.",
+  "connectToQBittorrent": "Se connecter à qBittorrent",
+  "connecting": "Connexion en cours...",
+  "serverNameOptional": "Nom du serveur (optionnel)",
+  "serverNameHint": "ex., NAS domestique",
+  "hostIpAddress": "Hôte/Adresse IP",
+  "hostIpAddressHint": "ex., 192.168.1.100 ou nas.local",
+  "protocolDetectedAutomatically": "Le protocole (http:// ou https://) sera détecté automatiquement",
+  "portHint": "ex., 8080",
+  "invalidPort": "Port invalide (1-65535)",
+  "pathOptional": "Chemin (optionnel)",
+  "pathHint": "ex., /qbittorrent",
+  "noNetworkConnection": "Aucune connexion réseau disponible. Veuillez vérifier votre connexion internet et réessayer.",
+  "connectionTimeout": "Délai d'attente de connexion - le serveur n'a pas répondu dans les 10 secondes",
+  "authenticationRequired": "Authentification requise",
+  "usernamePasswordRequiredRemote": "Le nom d'utilisateur et le mot de passe sont requis pour les connexions distantes",
+  "usernamePasswordRequiredRemoteMessage": "Le nom d'utilisateur et le mot de passe sont requis pour les connexions distantes.",
+  "authenticationRequiredMessage": "Cette instance qBittorrent nécessite une authentification. Veuillez fournir un nom d'utilisateur et un mot de passe.",
+  "invalidCredentials": "Nom d'utilisateur ou mot de passe invalide. Veuillez vérifier vos identifiants et réessayer.",
+  "cannotConnectToQBittorrent": "Impossible de se connecter à qBittorrent. Veuillez vérifier l'adresse et le port, et vous assurer que qBittorrent fonctionne.",
+  "failedToConnectToQBittorrent": "Échec de la connexion à qBittorrent. Veuillez vérifier vos détails de connexion et réessayer."
 }
