--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -196,5 +196,25 @@
   "lastConnected": "Last connected:",
   "qbittorrentVersion": "qBittorrent",
   "tapToConnectLongPressOptions": "Tap to connect. Long press for options.",
-  "tapAddServerBelowToConnect": "Tap \"Add Server\" below to connect to your first qBittorrent server."
+  "tapAddServerBelowToConnect": "Tap \"Add Server\" below to connect to your first qBittorrent server.",
+  "connectToQBittorrent": "Connect to qBittorrent",
+  "connecting": "Connecting...",
+  "serverNameOptional": "Server name (optional)",
+  "serverNameHint": "e.g., Home NAS",
+  "hostIpAddress": "Host/IP Address",
+  "hostIpAddressHint": "e.g., 192.168.1.100 or nas.local",
+  "protocolDetectedAutomatically": "Protocol (http:// or https://) will be detected automatically",
+  "portHint": "e.g., 8080",
+  "invalidPort": "Invalid port (1-65535)",
+  "pathOptional": "Path (optional)",
+  "pathHint": "e.g., /qbittorrent",
+  "noNetworkConnection": "No network connection available. Please check your internet connection and try again.",
+  "connectionTimeout": "Connection timeout - server did not respond within 10 seconds",
+  "authenticationRequired": "Authentication required",
+  "usernamePasswordRequiredRemote": "Username and password are required for remote connections",
+  "usernamePasswordRequiredRemoteMessage": "Username and password are required for remote connections.",
+  "authenticationRequiredMessage": "This qBittorrent instance requires authentication. Please provide username and password.",
+  "invalidCredentials": "Invalid username or password. Please check your credentials and try again.",
+  "cannotConnectToQBittorrent": "Cannot connect to qBittorrent. Please check the address and port, and ensure qBittorrent is running.",
+  "failedToConnectToQBittorrent": "Failed to connect to qBittorrent. Please check your connection details and try again."
 }
